# courses

./: .clang-format  .cmake-format.py  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  compile_commands.json  readme.md  rebuild.sh
.github/workflows/: main.yml
01/: CMakeLists.txt  readme.md
01/1/: CMakeLists.txt  hello_world.cxx  readme.md
01/2/: CMakeLists.txt
01/2/dynamic/: CMakeLists.txt  main.cpp
01/2/dynamic/src/: hello.cpp  hello.hpp
01/2/static/: CMakeLists.txt  build.sh
01/2/static/src/: hello.cpp
02-sdl-hw/: CMakeLists.txt
02-sdl-hw/shared-linked/: CMakeLists.txt  main.cxx
02-sdl-hw/static-linked/: CMakeLists.txt  build.sh  main.cxx
03-sdl-engine-hw/: CMakeLists.txt  readme.md
03-sdl-engine-hw/0-loop/: main.cxx
03-sdl-engine-hw/1-engine/: CMakeLists.txt  engine.cxx  engine.hxx  main.cxx  texture.hxx
03-sdl-engine-hw/2-engine-dll/: CMakeLists.txt  engine.cxx  main.cxx
03-sdl-engine-hw/3-engine-exe-hot_reload/: CMakeLists.txt  engine.cxx  engine.hxx  game.cxx  texture.hxx
03-sdl-engine-hw/loop/: CMakeLists.txt  main.cxx  readme.md
